# scim-v2-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml  publish.yml  release.yml
src/: lib.rs
src/models/: enterprise_user.rs  errors.rs  group.rs  others.rs  resource_types.rs  scim_schema.rs  service_provider_config.rs  user.rs
src/schemas/: enterprise_user.json  group.json  resource_type.json  scim_schema.json  service_provider_config.json  user.json
src/utils/: error.rs
